--- a/app/views/courses/3/_teach_content.html.erb
+++ b/app/views/courses/3/_teach_content.html.erb
@@ -1,1 +1,87 @@
-_teach_content.html.erb
+<dl>
+  <dd class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 教学内容的针对性与适用性</dd>
+  <div class="container-fluid">
+    <dt>1.教学内容</dt>
+    <dd>本课程的教学内容如下:</dd>
+    <dd>(1)录制教学演示录像</dd>
+    <dd>(2)录制教学演示录像</dd>
+    <dd>(3)录制教学演示录像</dd>
+    <dd>(4)录制教学演示录像</dd>
+    <dd>(5)录制教学演示录像</dd>
+    <dd>(6)录制教学演示录像</dd>
+    <dd>(7)录制教学演示录像</dd>
+  </div>
+  <dd class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 教学内容的组织与安排</dd>
+  <div class="container-fluid">
+    <dd>1. 教学内容的组织</dd>
+    <p>教学内容的组织以项目实践教学为主，通过项目实践的手段，真实再现企业iOS界面开发理念。教学内容组织过程中让学员自己通过对案例的理解与分析，以及在团队开发中的共同讨论，促使学员进入特定的iOS界面开发情景与过程，建立真实的开发环境和培养规范化的开发规范。</p>
+    <dd>实施过程：</dd>
+    <dd>
+      <p>（1）项目选择和学生分组。以项目来划分项目组。建立对不同岗位需求与角色的认知，并以平时成绩平均安排每个小组的技术实力。</p>
+      <p>（2）实践项目模拟企业真实的小型项目，这些项目真实且有社会效益，规模和难度适中，容易理解，可以激发学生的开发兴趣。</p>
+      <p>（3）必要的理论合理的融入项目阶段需求进行讲授，同时分解项目的各项子任务进行练习，边学边练、学以致用，减少纯理论知识的讲解。</p>
+    </dd>
+    <dd>2. 课程安排</dd>
+  </dl>
+  <div class="entry-content-table">
+    <table class="table table-bordered">
+      <thead>
+        <tr class="active">
+          <th>总课时</th>
+          <th>开课时间</th>
+          <th>有效期至</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td >353</td>
+          <td>2015.04.20</td>
+          <td>2016.07.20</td>
+        </tr>
+      </tbody>
+    </table>
+    <table class="table table-bordered">
+      <thead>
+        <tr class="danger">
+          <th>授课内容</th>
+          <th>课时</th>
+          <th>单课时长</th>
+          <th>学习频率</th>
+          <th>上课方式</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="active">
+          <td>课程</td>
+          <td>36</td>
+          <td>20分钟</td>
+          <td>每周四节</td>
+          <td>随时学，反复学<br>也可下载到手机，ipad离线学</td>
+        </tr>
+        <tr>
+          <td>训练课</td>
+          <td>36</td>
+          <td>20分钟</td>
+          <td>每周1节</td>
+          <td rowspan="4">预约上课，pc，手机，ipad都支持</td>
+        </tr>
+        <% (0..2).each do |index|%>
+        <tr>
+          <td>训练课</td>
+          <td>36</td>
+          <td>20分钟</td>
+          <td>每周1节</td>
+        </tr>
+        <% end %>
+        <tr class="active">
+          <td>阶段评估体系</td>
+          <td>36</td>
+          <td>25分钟</td>
+          <td>每周一次</td>
+          <td>测试评估系统</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<%= link_to "展开", "javascript:void(0)", class: "drop-down-arrow"%>
